--- a/application/admin/view/template/index.html
+++ b/application/admin/view/template/index.html
@@ -121,6 +121,7 @@
         function queryParams(params) {
             return {
                 //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
+                tid:"{$template.id}",
                 limit: params.limit, //页面大小
                 offset: params.offset,
                 order: params.order,
