--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -5,17 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>提交成功</title>
+    <title>欢迎访问</title>
 </head>
 
 <body>
     <div class="container">
         <div style="padding: 24px 48px;">
-            {present name="$content"}
-            <h1>{$content}</h1>
-            {else /}
             <h1>Hello&nbsp:)</h1>
-            {/present}
         </div>
     </div>
 
