--- a/application/admin/view/hand/index.html
+++ b/application/admin/view/hand/index.html
@@ -50,77 +50,8 @@
                     <input type="hidden" id="formType" value="common">
 
                     <div class="col-lg-3">
-                        <form class="form-box">
-                            <div class="well">
-                                <div>
-                                    <h4>表单截止时间</h4>
-                                    <div class="input-group">
-                                        <input name="endTime" type="text" autocomplete="off" id="endTime"
-                                            class="form-control">
-                                            <!-- <span class="input-group-addon"><i class="fa fa-calendar"></i></span> -->
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="well">
-                                <div>
-                                    <h4>
-                                        <font color="red"
-                                            style="position:relative; top:5px;font-weight:bold;font-size:16px">*</font>
-                                        是否指定唯一标识字段
-                                    </h4>
-                                    <label>
-                                        <input type="radio" name="ifUseKey" class="key-radio i-radio" value="1">
-                                        <span class="s-radio"></span>指定
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="ifUseKey" class="key-radio i-radio" value="0" checked>
-                                        <span class="s-radio"></span>不指定
-                                    </label>
-                                </div>
-                                <div class="hidden myKey">
-                                    <h5>请选择唯一标识字段</h5>
-                                    <select class="select" name="primaryKey" id="primaryKey">
-
-                                    </select>
-                                </div>
-                            </div>
-
-                            <div class="well mydata-box hidden">
-                                <div>
-                                    <h4>
-                                        <font color="red"
-                                            style="position:relative; top:5px;font-weight:bold;font-size:16px">*</font>
-                                        是否使用自定义数据集
-                                    </h4>
-                                    <label>
-                                        <input type="radio" name="ifUseData" class="data-radio i-radio" value="1">
-                                        <span class="s-radio"></span>使用
-                                    </label>
-
-                                    <label>
-                                        <input type="radio" name="ifUseData" class="data-radio i-radio" value="0"
-                                            checked>
-                                        <span class="s-radio"></span>不使用
-                                    </label>
-                                </div>
-                                <div class="hidden myData">
-                                    <h5>请选择数据集</h5>
-                                    {neq name="Think.session.myData|count" value="0"}
-                                    <select class="select" name="primaryKeyData" id="primaryKeyData"
-                                        style="margin-bottom: 10px;">
-                                        {volist name="Think.session.myData" id="vo"}
-                                        <option value="{$vo.id}">{$vo.title}</option>
-                                        {/volist}
-                                    </select>
-                                    {else /}
-                                    <p class="alert alert-warning">您还没有数据集，请新建数据集</p>
-                                    {/neq}
-                                </div>
-                            </div>
-                        </form>
-                        <button class="btn btn-success initTemplate" type="button"><span class="fa fa-table"></span>
+                        {include file="public/form_right" /}
+                        <button dataid="{:url('admin/Hand/add')}" class="btn btn-success initTemplate" type="button"><span class="fa fa-table"></span>
                             初始化表单</button>
                     </div>
                 </div>
@@ -130,83 +61,5 @@
 </div>
 {/block}
 {block name="page-js"}
-<script src="__JS__/jquery.validate.min.js"></script>
-<script src="__JS__/messages_zh.min.js"></script>
-<script src="__LIB__/design/designForm.js"></script>
-
-
-<script src="__LIB__/laydate/laydate.js"></script>
-
-
-
-<script>
-    $(function () {
-        laydate.render({
-            elem: '#endTime' //指定元素
-            , type: 'datetime'
-        });
-
-
-
-        $(".key-radio").click(function () {
-            var value = $(this).val();
-            if (value === "1") {
-                $(".myKey").removeClass("hidden").addClass("show")
-                $(".mydata-box").removeClass("hidden").addClass("show")
-            } else {
-                $(".form-box")[0].reset();
-                $(".myKey").removeClass("show").addClass("hidden")
-                $(".mydata-box").removeClass("show").addClass("hidden")
-            }
-        })
-        $(".data-radio").click(function () {
-            var value = $(this).val();
-            if (value === "1") {
-                $(".myData").removeClass("hidden").addClass("show")
-            } else {
-                $(".myData").removeClass("show").addClass("hidden")
-            }
-        })
-        $(".initTemplate").click(function () {
-
-            $(".confirm").click()
-            $("#subForm").submit()
-        })
-        $("#subForm").validate(
-            {
-                submitHandler: function (form) {
-                    var ifUseData = $("input[name='ifUseData']:checked").val();
-                    var ifUseKey = $("input[name='ifUseKey']:checked").val();
-                    var myData = $("#primaryKeyData").val();
-                    var primaryKey = $("#primaryKey").val();
-                    var endTime = $("#endTime").val();
-
-                    var data = $('#subForm').serialize()
-
-                    data = data + '&' + $.param({ 'endTime': endTime, })
-
-                    if (ifUseData == "1") {
-                        data = data + '&' + $.param({ 'myData': myData, })
-                    }
-                    if (ifUseKey == "1") {
-                        data = data + '&' + $.param({ 'primaryKey': primaryKey, })
-                    }
-
-                    $.ajax({
-                        url: "{:url('admin/Hand/add')}",
-                        type: "post",
-                        dataType: 'json',
-                        data: data,
-                        success: function (data) {
-                            if (data.code == 1) {
-                                showMsgAndHref(data)
-                            } else {
-                                showErrorMsg(data.msg)
-                            }
-                        },
-                    });
-                },
-            });
-    });
-</script>
+{include file="public/form_js" /}
 {/block}
