--- a/application/index/view/public/success.html
+++ b/application/index/view/public/success.html
@@ -9,7 +9,7 @@
     <meta name="description" itemprop="description" content="{$tname}">
     <meta name="author" content="Li Jian">
     <link rel="shortcut icon" type="IMG/x-icon" href="/favicon.ico" />
-    <title>{$msg}</title>
+    <title>欢迎访问</title>
     <!-- Bootstrap core CSS -->
     <link href="__CSS__/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap theme -->
