--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -5,16 +5,31 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta itemprop="name" content="">
+    <meta name="description" itemprop="description" content="这是一个小巧但是功能强大可靠地表单收集系统">
+    <meta name="author" content="Li Jian">
+    <link rel="shortcut icon" type="IMG/x-icon" href="/favicon.ico" />
     <title>欢迎访问</title>
+    <!-- Bootstrap core CSS -->
+    <link href="__CSS__/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap theme -->
+    <link href="__CSS__/index.css" rel="stylesheet">
+    <link rel="stylesheet" href="__LIB__/emoji/emoji.css">
+
 </head>
 
 <body>
-    <div class="container">
-        <div style="padding: 24px 48px;">
-            <h1>Hello&nbsp:)</h1>
+    <div class="container" style="margin-top: 50px;margin-bottom: 50px;">
+        <div class="row  col-lg-offset-1">
+            <div class="col-lg-10 form-block-background text-center" style="padding-bottom:20px;padding-top:20px;">
+                {empty name="$Request.param.msg"}<span class='emoji emoji26a1'></span>
+                <h1>欢迎访问</h1>
+                {else /}<h1>{$Request.param.msg}</h1>
+
+                {/empty}
+            </div>
         </div>
     </div>
-
 </body>
 
 </html>
