--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -18,14 +18,15 @@
                     <!-- <div class="alert alert-danger">
                         <p>使用word模板的表单无法编辑</p>
                     </div> -->
-                    <table class="table table-hover table-bordered text-nowrap" style="padding: 2px;">
+                    <table class="table table-hover text-nowrap" style="padding: 2px;">
                         <thead>
                             <tr>
                                 <th>表单名</th>
                                 {present name="$display"}<th>用户名</th>{/present}
+                                <th>类型</th>
                                 <th>数据集</th>
                                 <th>唯一列</th>
-                                <th>类型</th>
+                                <th>截止时间</th>
                                 <th>状态</th>
                                 <th colspan="3">操作</th>
                                 <th>创建时间</th>
@@ -38,23 +39,36 @@
                                         style="font-size:14px">{$vo.tname}</a> </td>
                                 {present name="$display"}<td>{$vo.get_user.username}</td>{/present}
                                 <td>
+                                    <span class="tempalte-type" status="{$vo.status}">
+                                        {if $vo.ttype==1}
+                                        <i class="fa fa-2x fa-file-word-o" title="带有word模板"></i>
+                                        {else /}
+                                        <i class="fa fa-2x fa-table" title="普通表单"></i>
+                                        {/if}
+                                    </span>
+                                </td>
+                                <td>
                                     {notempty name="$vo.mydata"}
                                     {$vo.mydata}
                                     {else /}
-                                    未指定
+                                    无
                                     {/notempty}
                                 </td>
                                 <td>
                                     {notempty name="$vo.primaryKey"}
                                     {$vo.primaryKey}
                                     {else /}
-                                    未指定
+                                    无
                                     {/notempty}
                                 </td>
                                 <td>
-                                    <span class="tempalte-type"
-                                        status="{$vo.status}">{if $vo.ttype==1}文档{else /}普通{/if}</span>
+                                    {if $vo.endTime!=0}
+                                    {$vo.endTime}
+                                    {else /}
+                                    无
+                                    {/if}
                                 </td>
+
                                 {if $vo.status==1}
                                 <td>
                                     <span class="tempalte-status badge badge-pill badge-success"
@@ -78,17 +92,17 @@
                                         dataid="{$vo.id}" status="{$vo.status}">删除</a> </td>
                                 {/if}
                                 <td>
-                                    <a href="{:url('admin/Template/index',['id'=>$vo.tid,'sid'=>'2'])}"
-                                        target="_blank" class="btn btn-xs btn-success"><span class="fa fa-table"></span>数据</a>
+                                    <a href="{:url('admin/Template/index',['id'=>$vo.tid,'sid'=>'2'])}" target="_blank"
+                                        class="btn btn-xs btn-success"><span class="fa fa-table"></span>数据</a>
                                 </td>
                                 <td>
                                     <a class="copy" dataid="{$vo.shareUrl}"><span class="fa"></span>分享</a>|
                                     <a href="{$vo.shareUrl}" target="_blank" class=""><span class="fa"></span>查看</a>
-                                    
+
                                     {if $vo.ttype==0}
                                     |
-                                    <a href="{:url('admin/Templates/edit',['tid'=>$vo.tid,'sid'=>'2'])}" target="_blank" class=""><span
-                                            class="fa"></span>编辑</a>
+                                    <a href="{:url('admin/Templates/edit',['tid'=>$vo.tid,'sid'=>'2'])}" target="_blank"
+                                        class=""><span class="fa"></span>编辑</a>
                                     {/if}
                                 </td>
                                 <td>{$vo.create_time|date='Y年m月d日 H:i'}</td>
